--- a/lunar_lander_vec.ipynb
+++ b/lunar_lander_vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,13 @@
     "    mean_reward, std_reward = evaluate_policy(model, eval_env, n_eval_episodes=10, deterministic=True)\n",
     "    print(f\"mean_reward= {mean_reward:.2f} +/- {std_reward}\", end=\"\\r\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -73,7 +80,7 @@
     "\n",
     "# Train the agent\n",
     "steps = 1e6\n",
-    "model.learn(total_timesteps=steps)\n",
+    "model.learn(total_timesteps=steps, progress_bar=True)\n",
     "model_name = 'ppo-LunarLander-v2_vector'\n",
     "model.save(model_name)"
    ]
@@ -84,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize(model,env,100)"
+    "visualize(model,env,200)"
    ]
   },
   {
@@ -95,6 +102,13 @@
    "source": [
     "print_results(model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
